# galaxy_data

./: .gitignore  README.md  main.py  metadata.db  pyproject.toml
.embeddings/: embedding_map.json
galaxy/: __init__.py  config.py  types.py
galaxy/agents/: building_agent.py  collection_agent.py  discovery_agent.py  message_bus.py  processing_agent.py  web_extraction_agent.py
galaxy/cache/: cache_manager.py
galaxy/collection/: circuit_breaker.py  crawler_pool.py  legal_checker.py  rate_limiter.py
galaxy/collection/spiders/: base_spider.py  generic_site_spider.py  github_spider.py  huggingface_spider.py  kaggle_spider.py  search_engine_spider.py  web_search_spider.py
galaxy/gateway/: gateway.py
galaxy/intelligence/: embeddings.py  query_parser.py
galaxy/knowledge/: dataset_lineage.py  metadata_store.py  source_registry.py
galaxy/orchestrator/: orchestrator.py  state_machine.py
galaxy/processing/: cleaner.py  deduplicator.py  filter_engine.py  merger.py  provenance_tracker.py  quality_scorer.py  router.py  schema_detector.py  validator.py
galaxy/processing/pipelines/: document.py  generic.py  image.py  tabular.py
galaxy/storage/: dataset_store.py  session_workspace.py
galaxy/utils/: __init__.py  hashing.py  retry.py
galaxy_data.egg-info/: SOURCES.txt  requires.txt
workspace/session_30779d8f19b6/final/: PROVENANCE.json  QUALITY_REPORT.json  README.md  SOURCES.txt  cleaned_Sp1786_multiclass-sentiment-analysis-dataset_train_df.csv  cleaned_Sp1786_multiclass-sentiment-analysis-dataset_val_df.csv
(+16 files in other folders)
